refactor: remove create idempotency keys
